<resources>
    <string name="app_name">CloudCommerce</string>
    <string name="ok_text">OK</string>

    <!-- menu strings -->
    <string name="menu_services">Services</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    <!-- header strings -->
    <string name="signout">Sign Out</string>
    <string name="signin">Sign In</string>
    <string name="welcome_txt">Welcome !</string>

    <!-- drawer strings-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Login Strings -->
    <string name="login_title">Log In</string>
    <string name="email_hint_txt">Enter Email</string>
    <string name="pwd_hint_txt">Password</string>
    <string name="forgot_pwd_txt">Forgot Password</string>
    <string name="not_member_yet_txt">Not a member yet</string>
    <string name="register_now_txt">Register Now!</string>
    <string name="login_as_guest_txt">Log In as Guest</string>

    <!-- Register Strings -->
    <string name="register_title">Register</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="name_hint_txt">Name</string>
    <string name="first_name_hint_txt">First Name</string>
    <string name="last_name_hint_txt">Last Name</string>
    <string name="first_name_error_msg">Enter First Name</string>
    <string name="last_name_error_msg">Enter Last Name</string>
    <string name="email_error_msg">Enter Email</string>
    <string name="valid_email_error_msg">Enter valid Email</string>
    <string name="password_error_msg">Enter Password</string>

    <!-- Guest Login strings -->
    <string name="guest_text">Guest</string>
    <string name="continue_text">Continue</string>
    <string name="guest_login_text">Guest Login</string>

    <!-- Forgot Password strings -->
    <string name="forgot_pwd_info">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="submit_txt">Submit</string>

    <string name="visit_charge_txt">Visit Charge</string>
    <string name="add_to_cart_txt">Add to Cart</string>
    <string name="order_now_txt">Order now</string>
    <string name="title_activity_add_address">AddAddressActivity</string>

    <!-- Add Address screens -->
    <string name="add_address_title">Add Address</string>
    <string name="address_hint_text">Address</string>
    <string name="pincode_hint_text">Pincode</string>
    <string name="city_hint_text">City</string>
    <string name="state_hint_text">State</string>
    <string name="mobile_no_hint_text">Mobile Number</string>
    <string name="name_error_msg">Enter Name</string>
    <string name="address_error_msg">Enter Address</string>
    <string name="pincode_error_msg">Enter Pincode</string>
    <string name="city_error_msg">Enter City</string>
    <string name="state_error_msg">Enter State</string>
    <string name="phone_no_error_msg">Enter Phone Number</string>
    <string name="valid_phone_number_msg">Enter valid phone number</string>
    <string name="valid_pincode_msg">Enter valid pincode</string>

    <!-- cart summary screen -->
    <string name="cart_summary_title">Cart Summary</string>
    <string name="service_summary_txt">Service Summary</string>
    <string name="summary_item_count">1 Item</string>
    <string name="summary_total">Total</string>
    <string name="summary_delivery_charges">Delivery Charges</string>
    <string name="summary_grand_total">Grand Total</string>
    <string name="payment">Payment</string>
    <string name="pay_by_cash_on_delivery">Cash on Delivery</string>
    <string name="shipping_address">Shipping address</string>

    <string name="txt_no_addr_for_user">There are no addresses for this user \n Please add address</string>


    <!--Network related strings-->
    <string name="no_internet_access">Please check your internet connection.</string>
    <string name="net_error">We are experiencing system issues,Please try again later.</string>
    <string name="net_error_host_exp">UnKnown HostException</string>

    <!-- rupee symbol -->
    <string name="rupee_symbol">\u20B9</string>

    <string name="select_addr_title">Select Address</string>

</resources>
