<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/guest_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_left_right_spacing"
            android:layout_marginRight="@dimen/login_left_right_spacing"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guest_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guest_title_top_spacing"
                android:fontFamily="sans-serif-light"
                android:text="@string/guest_text"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/title_text_size" />

            <EditText
                android:id="@+id/guest_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_spacing"
                android:fontFamily="sans-serif-light"
                android:hint="@string/name_hint_txt"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/edittext_text_color"
                android:textSize="@dimen/edittext_text_size" />

            <EditText
                android:id="@+id/guest_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_spacing"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email_hint_txt"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/edittext_text_color"
                android:textSize="@dimen/edittext_text_size" />

            <EditText
                android:id="@+id/guest_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_spacing"
                android:fontFamily="sans-serif-light"
                android:hint="@string/pwd_hint_txt"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/edittext_text_color"
                android:textSize="@dimen/edittext_text_size" />

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/login_btn_top_spacing"
                android:background="@color/btn_bg_color"
                android:fontFamily="sans-serif"
                android:text="@string/continue_text"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>