<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_left_right_spacing"
            android:layout_marginRight="@dimen/login_left_right_spacing"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_left_right_spacing"
                android:text="@string/login_title"
                android:textColor="@color/title_text_color"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/title_text_size" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_spacing"
                android:hint="@string/email_hint_txt"
                android:textColor="@color/edittext_text_color"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/edittext_text_size" />

            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_spacing"
                android:hint="@string/pwd_hint_txt"
                android:textColor="@color/edittext_text_color"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/edittext_text_size" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/login_btn_top_spacing"
                android:background="@color/btn_bg_color"
                android:text="@string/login_title"
                android:textSize="@dimen/btn_text_size"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/forgot_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_forgot_pwd_top_spacing"
                android:gravity="center"
                android:text="@string/forgot_pwd_txt"
                android:textColor="@color/title_text_color"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/forgot_pwd_txt_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/login_register_info_top_spacing"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/not_member_yet_txt"
                    android:textColor="@color/title_text_color"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/not_a_member_txt_size" />

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:background="@drawable/blue_transparent_background"
                    android:text="@string/register_now_txt"
                    android:textAllCaps="false"
                    android:textColor="@color/register_now_btn_border_color"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/register_now_txt_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_as_guest_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guest_login_top_spacing"
                android:gravity="center_horizontal"
                android:text="@string/login_as_guest_txt"
                android:textColor="@color/title_text_color"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/register_now_txt_size" />
        </LinearLayout>
    </ScrollView>
    l
</LinearLayout>
