<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    tools:context="com.cloudcommerce.app.fragments.RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_left_right_spacing"
            android:layout_marginRight="@dimen/login_left_right_spacing"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_left_right_spacing"
                android:fontFamily="sans-serif-light"
                android:text="@string/register_title"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/title_text_size" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_spacing"
                android:fontFamily="sans-serif-light"
                android:hint="@string/first_name_hint_txt"
                android:textColor="@color/edittext_text_color"
                android:textSize="@dimen/edittext_text_size" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_spacing"
                android:fontFamily="sans-serif-light"
                android:hint="@string/last_name_hint_txt"
                android:textColor="@color/edittext_text_color"
                android:textSize="@dimen/edittext_text_size" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_spacing"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email_hint_txt"
                android:textColor="@color/edittext_text_color"
                android:textSize="@dimen/edittext_text_size"
                android:inputType="textEmailAddress"/>


            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/login_btn_top_spacing"
                android:background="@color/btn_bg_color"
                android:fontFamily="sans-serif"
                android:text="@string/register_title"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/login_btn_top_spacing"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left|center"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/title_text_color"
                    android:textSize="@dimen/not_a_member_txt_size" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_weight="1"
                    android:background="@drawable/blue_transparent_background"
                    android:fontFamily="sans-serif"
                    android:text="@string/login_title"
                    android:textAllCaps="false"
                    android:textColor="@color/register_now_btn_border_color"
                    android:textSize="@dimen/register_now_txt_size" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_as_guest_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_btn_top_spacing"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/login_as_guest_txt"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/register_now_txt_size" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
