<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/forgot_pwd_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/login_left_right_spacing"
            android:layout_marginRight="@dimen/login_left_right_spacing"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guest_title"
                style="@style/roboto_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/guest_title_top_spacing"
                android:text="@string/forgot_pwd_txt"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:id="@+id/guest_username"
                style="@style/roboto_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/forgot_pwd_info_txt_top_spacing"
                android:text="@string/forgot_pwd_info"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/forgot_pwd_info_txt_size" />

            <EditText
                android:id="@+id/guest_email"
                style="@style/roboto_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_spacing"
                android:hint="@string/email_hint_txt"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="@color/edittext_hint_text_color"
                android:textSize="@dimen/edittext_text_size" />


            <Button
                android:id="@+id/continue_btn"
                style="@style/roboto_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/login_btn_top_spacing"
                android:background="@color/btn_bg_color"
                android:text="@string/submit_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>